feat: school final applicant endpoint
